# jsoned

./: .gitignore  BENCHMARK.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  ROADMAP.md  USAGE.md  jsoned-keymap.html
examples/: json_perf_gen.rs
src/: bench.rs  convert.rs  diff.rs  diff_app.rs  event.rs  fake_data.rs  lint.rs  main.rs  plugin.rs  pretty.rs  redact.rs  tree.rs  ui.rs
src/app/: mod.rs
