[package]
name = "jsoned"
version = "0.3.0"
edition = "2021"
authors = ["Thierry Soulie <thierry.soulie@tsodev.fr>"]
description = "Keyboard-driven TUI for viewing and editing JSON — with format conversion (YAML, TOML, CSV)"
license = "MIT"
repository = "https://github.com/tsodev/jsoned"
homepage = "https://github.com/tsodev/jsoned"
keywords = ["tui", "json", "editor", "yaml", "terminal"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[[bin]]
name = "jsoned"
path = "src/main.rs"

[dependencies]
ratatui      = "0.29"
crossterm    = { version = "0.28", features = ["use-dev-tty"] }
serde        = { version = "1", features = ["derive"] }
serde_json   = { version = "1", features = ["preserve_order"] }
serde_yaml   = "0.9"
toml         = "0.8"
csv          = "1"
anyhow       = "1"
clap         = { version = "4", features = ["derive"] }
indexmap     = { version = "2", features = ["serde"] }
tui-textarea = { version = "0.7", features = ["crossterm"] }
