[package]
name = "jsoned"
version = "0.5.1"
edition = "2021"
authors = ["Thierry Soulie <thierry.soulie@tsodev.fr>"]
description = "Keyboard-driven TUI for viewing and editing JSON — with format conversion (YAML, TOML, CSV, JSONL)"
license = "MIT"
repository = "https://github.com/tsodev/jsoned"
homepage = "https://github.com/tsodev/jsoned"
keywords = ["tui", "json", "editor", "yaml", "terminal"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[[bin]]
name = "jsoned"
path = "src/main.rs"

[dependencies]
ratatui      = "0.29"
crossterm    = { version = "0.28", features = ["use-dev-tty"] }
serde        = { version = "1", features = ["derive"] }
serde_json   = { version = "1", features = ["preserve_order"] }
serde_yaml   = "0.9"
toml         = "0.8"
csv          = "1"
anyhow       = "1"
clap         = { version = "4", features = ["derive"] }
indexmap     = { version = "2", features = ["serde"] }
tui-textarea = { version = "0.7", features = ["crossterm"] }
jaq-core     = "3.1.0"
jaq-std      = "3.0.1"
jaq-json     = "2.0.1"
regex        = "1"
fake         = { version = "2.9", features = ["uuid"] }
chrono       = "0.4"

[dev-dependencies]
# Only for examples/json_perf_gen.rs (synthetic test-data generator for BENCHMARK.md) — never
# compiled into the shipped `jsoned` binary.
indicatif = "0.17"
uuid      = { version = "1.6", features = ["v4", "serde"] }
